--- a/dino/index.html
+++ b/dino/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="index.js"></script>
+    <script type="module" src="mediapipe.js"></script>
 </head>
 
 <body id="t" class="offline">
@@ -31,6 +32,6 @@
     </div>
 </body>
 
-<script src="loader.js" />
+<script src="loader.js"></script>
     
 </html>
