jumping the dino on hand show up

--- a/dino/index.html
+++ b/dino/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="index.js"></script>
-    <script type="module" src="mediapipe.js"></script>
+    <script src="mediapipe/camera_utils.js"></script>
+    <script src="mediapipe/drawing_utils.js"></script>
+    <script src="mediapipe/hands.js"></script>
+
+    <script src="mediapipe.js"></script>
+
+    <script src="loader.js"></script>
 </head>
 
 <body id="t" class="offline">
@@ -31,7 +37,4 @@
         </div>
     </div>
 </body>
-
-<script src="loader.js"></script>
-    
 </html>
