--- a/public/game/main.html
+++ b/public/game/main.html
@@ -203,11 +203,11 @@
             image-rendering: -moz-crisp-edges !important;
             image-rendering: crisp-edges !important;
             filter: 
-                contrast(1.4) 
+                contrast(1.8) 
                 brightness(0.85)
                 saturate(1.3)
                 blur(0.3px);
-            transform: scale(1);
+            transform: scale(0.9);
             transition: opacity 0.3s, visibility 0.3s;
             position: absolute;
             top: 0;
@@ -571,7 +571,7 @@
             <div class="camera-box">
                 <h2 class="box-title">Camera Feed</h2>
                 <div class="camera-display" id="camera-display">
-                    <div class="camera-placeholder">CAMERA STREAM</div>
+                    <div class="camera-placeholder" id="video-placeholder">CAMERA STREAM</div>
                 </div>
                 <div class="toggle-container">
                     <span class="toggle-label">Camera</span>
