live score board changes

--- a/public/game/main.html
+++ b/public/game/main.html
@@ -374,13 +374,14 @@
 
         @media (max-width: 1500px){
             .game-container {
-                width: 80%;
+                width: 75%;
                 height: 50vh;
                 min-height: 300px;
+                padding-bottom: 60px;
             }
 
             .bottom-panel{
-                width: 80%;
+                width: 75%;
             }
             
             .camera-box {
