--- a/public/game/main.html
+++ b/public/game/main.html
@@ -107,7 +107,9 @@
         
         .game-container {
             width: 75%;
-            height: 60vh;
+            /* height: 60vh; */
+            height: auto;
+            flex-grow: 1;
             min-height: 400px;
             border: 4px solid var(--arcade-neon-green);
             background-color: var(--arcade-dark);
@@ -375,9 +377,9 @@
         @media (max-width: 1500px){
             .game-container {
                 width: 75%;
-                height: 50vh;
+                /* height: 50vh; */
                 min-height: 300px;
-                padding-bottom: 60px;
+                /* padding-bottom: 60px; */
             }
 
             .bottom-panel{
